feat(profile): Complete migration from View-based to Compose-based ProfileActivity
- Create new ProfileComposeActivity as Jetpack Compose-based replacement
- Update AndroidManifest to register ProfileComposeActivity as primary profile activity
- Update all navigation points across the app to use ProfileComposeActivity:
* HomeActivity, ChatActivity, SearchActivity, PostDetailActivity
* UserFollowsListActivity, FollowListActivity, HomeFragment
* NotificationClickHandler, MentionUtils, MarkdownRenderer, ChatHelper
- Update ChatCreationIntegrationTest to reference new ProfileComposeActivity
- Preserve old ProfileActivity as fallback for backward compatibility
- Add comprehensive migration documentation with testing checklist and rollback plan
- All existing profile features preserved: follow/unfollow, post feed, photo grid, content filtering, profile editing, share, QR code, block/report/mute, deep link support

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -80,7 +80,7 @@
 			</intent-filter>
 		</activity>
 		<activity
-			android:name=".ProfileActivity"
+			android:name=".ProfileComposeActivity"
 			android:configChanges="orientation|screenSize|keyboardHidden|smallestScreenSize|screenLayout"
 			android:hardwareAccelerated="true"
 			android:supportsPictureInPicture="true"
@@ -97,6 +97,15 @@
 					  android:host="profile" />
 			</intent-filter>
 		</activity>
+		<activity
+			android:name=".ProfileActivity"
+			android:configChanges="orientation|screenSize|keyboardHidden|smallestScreenSize|screenLayout"
+			android:hardwareAccelerated="true"
+			android:supportsPictureInPicture="true"
+			android:screenOrientation="portrait"
+			android:windowSoftInputMode="stateHidden"
+			android:launchMode="singleTop"
+			android:exported="false" />
 		<activity
 			android:name=".ProfileEditActivity"
 			android:configChanges="orientation|screenSize|keyboardHidden|smallestScreenSize|screenLayout"
