--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -260,6 +260,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:5.0.0-rc01'
     implementation 'com.github.bumptech.glide:compose:1.0.0-beta01'
     ksp 'com.github.bumptech.glide:ksp:5.0.0-rc01'
+    annotationProcessor 'com.github.bumptech.glide:compiler:5.0.0-rc01'
 
     // Networking
     implementation 'com.squareup.okhttp3:okhttp:4.12.0'
